--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <script src="solution.js"></script>
+        <script src="solutions.js"></script>
         <title></title>
     </head>    
     <body>
