--- a/index.html
+++ b/index.html
@@ -1,11 +1,30 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="utf-8">
-        <script src="solutions.js"></script>
-        <title></title>
-    </head>    
-    <body>
+<head>
+    <meta charset="utf-8">
+    <script src="solutions.js"></script>
+    <link rel="stylesheet" href="stylesheet.css">
+    <title>Dragon Ball Z Characters</title>
+</head>
+<body>
 
-    </body>
+    <h1 id="title">Dragon Ball Z Characters:</h1>
+    
+    <h2 class="blue">Goku</h2>
+
+    <div class="container">
+        <img src="goku.jpg" alt="Goku">
+    </div>
+
+    <div>
+        <b>more to see that's bold</b>
+    </div>
+
+    <h2 class="blue">Trunks</h2>
+
+    <img src="trunks.jpg" alt="Trunks">
+
+    <p>The history of Trunks is quite sad.</p>
+
+</body>
 </html>
