--- a/index.html
+++ b/index.html
@@ -16,8 +16,11 @@
         <img src="goku.jpg" alt="Goku">
     </div>
 
+    <!--comment in html this shows link to new page -->
+
+    <hr>
     <div>
-        <b>more to see that's bold</b>
+        <b><a href = "dragonball.html">more to see that's bold </href> </b>
     </div>
 
     <h2 class="blue">Trunks</h2>
@@ -25,6 +28,10 @@
     <img src="trunks.jpg" alt="Trunks">
 
     <p>The history of Trunks is quite sad.</p>
-
+    <ol>
+       <li>his mentor died</li>
+       <li> His whole family died except his mother </li>
+       <li> later in the future his mother died </li> 
+    </ol>
 </body>
 </html>
