change ninja and good

--- a/dragonball.html
+++ b/dragonball.html
@@ -9,31 +9,32 @@
     <h1> Learn ninja coding and good cooding </h1>
     <h2> Ninja code </h2>
     <p>
-        1) make code short at possible
-        2) one letter variables
-        3) use abreviations 
-        4) nameing variables by its type 
-        5) use similar varibales like data and date
-        6) reuse variable names 
-        7) putting unecessay underscores _
-        8) avoid comments 
-        9) mix tabs and spaces
-        10) do powerful functions that do alot of things. 
+        - Make code as short as possible.
+        - Use one-letter variables.
+        - Use abbreviations everywhere.
+        - Name variables by type instead of meaning.
+        - Use similar variable names like 'data' and 'date'.
+        - Reuse the same variable names.
+        - Add unnecessary underscores.
+        - Avoid comments completely.
+        - Mix tabs and spaces.
+        - Write giant powerful functions that do many things at once. 
     </p>  
     
     <h2> Good Coding </h2>
 
     <p>
-        1) use curly brackets appropriatly with space before and after 
-        2) short horizontal lines that not long with code break it up to fit on screen not to scroll
-        3) make idents and that are consistent. 
-        4) use simicolons and not skipped
-        5) avoid nestinf too many levels like in loops 
-        6) declare funtions 
-        7) use styling guide for codes 
-        8) use automatic liters to format 
-        9) use commets that make sense
-        10) gives varibles aprropriate and meaningfull names 
+        - Use curly brackets appropriately with spacing before and after.
+        - Keep horizontal lines short; break long code lines to avoid scrolling.
+        - Use consistent indentation.
+        - Use semicolons and do not skip them.
+        - Avoid nesting too many levels (like deep loops).
+        - Declare functions properly.
+        - Follow a styling guide for your code.
+        - Use automatic linters to format code.
+        - Write comments that make sense.
+        - Give variables appropriate and meaningful names.
+
     </p>
 
     <a href = "index.html"> Go Back</a>
