--- a/index.html
+++ b/index.html
@@ -33,5 +33,9 @@
        <li> His whole family died except his mother </li>
        <li> later in the future his mother died </li> 
     </ol>
+
+    <a href="example.html">new page of learning </a>
+    
+
 </body>
 </html>
